<resources>
    <string name="appName">MYToDo</string>
    <string name="fabText">ToDo작성</string>
    <string name="settingUserInfoDesc">사용자 정보</string>
    <string name="settingChangeNick">닉네임 변경</string>
    <string name="settingGeneralDesc">일반</string>
    <string name="settingAddNewTaskOnTop">새로운 작업을 상단에 추가</string>
    <string name="settingMoveImportantToTop">중요한 일을 상단으로 이동</string>
    <string name="settingCheckBeforeRemove">삭제하기 전에 확인</string>
    <string name="settingInfoDesc">정보</string>
    <string name="placeholder">placeholder</string>
    <string name="menuCurrentTask">현재 할 일</string>
    <string name="menuImportantTask">중요한 일</string>
    <string name="menuSetting">환경설정</string>
    <string name="counterPlaceholder">완료됨 1</string>
    <string name="initMessage">애플리케이션을 처음 실행 하셨습니다!\n사용자 닉네임을 입력해주세요.</string>
    <string name="initInputHint">닉네임을 입력해주세요</string>
    <string name="submit">확인</string>
    <string name="version">버전</string>
    <string name="taskCounter">완료됨 : %1d</string>
    <string name="welcomeMessage">%1s님 환영합니다!!</string>
</resources>