<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/placeholder"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintLeft_toLeftOf="@+id/homeLayout"
            app:layout_constraintRight_toRightOf="@+id/homeLayout"
            app:layout_constraintTop_toTopOf="@+id/homeLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/toDoAllList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
            tools:itemCount="1"
            tools:listitem="@layout/todo_item" />

        <View
            android:id="@+id/mainDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/toDoAllList" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/doneTaskCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/task_counter_shape"
            android:paddingLeft="6dp"
            android:paddingTop="2dp"
            android:paddingRight="6dp"
            android:paddingBottom="2dp"
            android:text="@string/counterPlaceholder"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/toDoDoneList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/doneTaskCounter"
            tools:itemCount="4"
            tools:listitem="@layout/todo_item" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:text="@string/fabText"
            app:icon="@drawable/fab_icon"
            app:layout_constraintBottom_toBottomOf="@+id/homeLayout"
            app:layout_constraintRight_toRightOf="@+id/homeLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

